--- a/resources/css/todo.css
+++ b/resources/css/todo.css
@@ -106,6 +106,11 @@ main .todo-item {
     flex-direction:column;
 }
 
+:is(.todo-edit,.todo-create) main form * {
+    max-width:100%;
+    box-sizing: border-box;
+}
+
 .todo-create main form input[type="submit"]{
     margin-top: 10px;
 }
